--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -22,16 +22,16 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_driver:
     sdk: flutter
-  test: any
+  test: ^1.24.9
 
-  libphonenumber: ^2.0.0
+  libphonenumber: ^2.0.2
   intl_phone_number_input:
     path: ../
 
